Change 'Multimedia' category to 'Sound & Vision' for consistancy (bug
* data/toc.xml.in:
Change 'Multimedia' category to 'Sound & Vision' for consistancy
(bug #332182)

--- a/data/toc.xml.in
+++ b/data/toc.xml.in
@@ -41,7 +41,7 @@
       <_title>Internet</_title>
     </toc>
     <toc id="ApplicationsMultimedia" icon="gnome-multimedia">
-      <_title>Multimedia</_title>
+      <_title>Sound &amp; Vision</_title>
     </toc>
     <toc id="ApplicationsOffice" icon="gnome-applications">
       <_title>Office</_title>
