Print DB_PROFILE message to the screen Add support for the yelp:cache
* src/yelp-debug.c: (yelp_debug): Print DB_PROFILE message to the
screen
* src/yelp-xslt-pager.c: (xslt_pager_process), (xslt_yelp_cache):
Add support for the yelp:cache extension element; speeds up docbook
processing for large documents (like gnumeric manual)
* stylesheets/db2html.xsl.in: Use the yelp:cache extension element in
the db.number template (overrides the one from gnome-doc-utils)

--- a/stylesheets/db2html.xsl.in
+++ b/stylesheets/db2html.xsl.in
@@ -58,6 +58,13 @@
 <xsl:param name="db.chunk.index_basename" select="'__yelp_index'"/>
 <xsl:param name="db.chunk.toc_basename"   select="'__yelp_toc'"/>
 
+<xsl:template name="db.number">
+  <xsl:param name="node" select="."/>
+  <yelp:cache key="db.number" node="$node">
+    <xsl:apply-templates mode="db.number.mode" select="$node"/>
+  </yelp:cache>
+</xsl:template>
+
 <!-- == db.chunk == -->
 <xsl:template name="db.chunk">
   <xsl:param name="node" select="."/>
