--- a/configure.in
+++ b/configure.in
@@ -67,10 +67,9 @@ PKG_CHECK_MODULES(YELP,
 [
 	gconf-2.0
 	gnome-doc-utils >= 0.3.1
-        libgnomeprint-2.2
-        libgnomeprintui-2.2
+	gtk+-unix-print-2.0
 	gnome-vfs-2.0 >= 1.1
-	gtk+-2.0 >= 2.5.3
+	gtk+-2.0 >= 2.10.0
 	libglade-2.0 >= 2.0.0
 	libgnome-2.0 >= 2.14.0
 	libgnomeui-2.0 >= 2.14.0
