- Changed "Sound & Vision" to "Sound & Video"
* data/toc.xml.in:
- Changed "Sound & Vision" to "Sound & Video"

--- a/data/toc.xml.in
+++ b/data/toc.xml.in
@@ -53,7 +53,7 @@
     <_description>Scientific Applications.</_description>
   </toc>
   <toc id="ApplicationsMultimedia" icon="gnome-multimedia">
-    <_title>Sound &amp; Vision</_title>
+    <_title>Sound &amp; Video</_title>
     <_description>Applications related to multimedia</_description>
   </toc>
   <toc id="ApplicationsSystem" icon="gnome-system">
