Fix for mozilla API change on trunk.
2006-12-01  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:
	* m4/gecko.m4:
	* src/Makefile.am:
	* src/Yelper.cpp:
	Fix for mozilla API change on trunk.

--- a/configure.in
+++ b/configure.in
@@ -214,6 +214,7 @@ AC_SUBST([MOZILLA_INCLUDE_ROOT])
 AC_SUBST([MOZILLA_HOME])
 AC_SUBST([MOZILLA_PREFIX])
 AC_SUBST([MOZILLA_EXTRA_LIBS])
+AC_SUBST([MOZILLA_GLUE_LIBS])
 
 case "$MOZILLA" in
 xulrunner) gecko_min_version=1.8 ;;
