- Making YelpError cleaner and more usable for our purposes
* src/test-transform.c:
* src/yelp-error.c:
* src/yelp-error.h:
- Making YelpError cleaner and more usable for our purposes

* src/yelp-transform.c:
* src/yelp-transform.h:
- Copyright in 2007 too

* src/yelp-page.c:
* src/yelp-page.h:
- The beginnings of the new read()-able YelpPage

* src/Makefile.am:
- yelp-error.h != yelp-transform.h

svn path=/branches/yelp-document/; revision=2785

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -166,7 +166,7 @@ test_uri_LDFLAGS = $(AM_LDFLAGS)
 
 test_transform_SOURCES =				\
 	yelp-debug.c		yelp-debug.h		\
-	yelp-error.c		yelp-transform.h	\
+	yelp-error.c		yelp-error.h		\
 	yelp-transform.c	yelp-transform.h	\
 	test-transform.c
 test_transform_CFLAGS = $(YELP_CFLAGS) $(AM_CFLAGS) $(YELP_DEFINES)
