src/yelp-toc-pager.c: First work on Spoon integration Search for
src/yelp-toc-pager.c:
* configure.in:
First work on Spoon integration
Search for pkg-config Spoon file
Run a spoon-for-each, printing doc names
-This line, and those below, will be ignored--

M    configure.in
M    src/yelp-toc-pager.c
M    ChangeLog

svn path=/branches/yelp-spoon/; revision=2791

--- a/configure.in
+++ b/configure.in
@@ -78,6 +78,7 @@ PKG_CHECK_MODULES(YELP,
 	libexslt >= 0.8.1
 	libstartup-notification-1.0 >= 0.8
 	dbus-glib-1
+	spoon >= 0.4.5
 ])
 AC_SUBST([YELP_CFLAGS])
 AC_SUBST([YELP_LIBS])
