- Added yelp_error_copy
* src/yelp-error.c:
* src/yelp-error.h:
- Added yelp_error_copy

* src/yelp-transform.c:
- Added a few debug statements

* src/test-transform.c:
- Added the --random-timeout option

* src/yelp-page.c:
- Don't use g_free with memory slicese.

* src/yelp-docbook.c:
* src/yelp-docbook.h:
* src/yelp-document.c:
* src/yelp-document.h:
- Added a more-or-less complete YelpDocument implementation for DocBook

* src/test-document.c:
* src/Makefile.am:
- Added a test program for YelpDocument, currently only using DocBook

svn path=/branches/yelp-document/; revision=2795

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -102,21 +102,22 @@ yelp_LDADD =				\
 yelp_LDFLAGS = -R$(MOZILLA_HOME) $(AM_LDFLAGS)
 
 check_PROGRAMS =		\
-	test-docbook		\
+	test-document		\
 	test-man-parser		\
 	test-page		\
 	test-transform
 
-test_docbook_SOURCES =					\
+test_document_SOURCES =					\
 	yelp-debug.c		yelp-debug.h		\
 	yelp-docbook.c		yelp-docbook.h		\
 	yelp-document.c		yelp-document.h		\
 	yelp-error.c		yelp-error.h		\
+	yelp-page.c		yelp-page.h		\
 	yelp-transform.c	yelp-transform.h	\
-	test-transform.c
-test_docbook_CFLAGS = $(YELP_CFLAGS) $(AM_CFLAGS) $(YELP_DEFINES)
-test_docbook_LDADD = $(YELP_LIBS)
-test_docbook_LDFLAGS = $(AM_LDFLAGS)
+	test-document.c
+test_document_CFLAGS = $(YELP_CFLAGS) $(AM_CFLAGS) $(YELP_DEFINES)
+test_document_LDADD = $(YELP_LIBS)
+test_document_LDFLAGS = $(AM_LDFLAGS)
 
 test_man_parser_SOURCES =					\
 	yelp-error.c		yelp-error.h			\
