- Made yelp-man-parser use yelp-debug
* src/yelp-man-parser.c:
* src/Makefile.am:
- Made yelp-man-parser use yelp-debug

svn path=/branches/yelp-document/; revision=2800

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -120,6 +120,7 @@ test_document_LDADD = $(YELP_LIBS)
 test_document_LDFLAGS = $(AM_LDFLAGS)
 
 test_man_parser_SOURCES =					\
+	yelp-debug.c		yelp-debug.h			\
 	yelp-error.c		yelp-error.h			\
 	yelp-io-channel.c	yelp-io-channel.h		\
 	yelp-man-parser.c	yelp-man-parser.h		\
