--- a/yelp.desktop.in.in
+++ b/yelp.desktop.in.in
@@ -7,7 +7,7 @@ Icon=gnome-help.png
 StartupNotify=true
 Terminal=false
 Type=Application
-Categories=GNOME;GTK;Application;Core;
+Categories=GNOME;GTK;Core;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=Yelp
 X-GNOME-Bugzilla-Component=general
