Minor fix to recognise man:<filepath>
* src/yelp-utils.c:
Minor fix to recognise man:<filepath>
* src/Makefile.am:
* src/yelp-window.c: 
Add support for docbook (yay!) and
man pages
Rename silly function names to something slightly
more sensible
Update my email address in help dialog (minor)
* src/test-document.c:
* src/yelp-document.c:
* src/yelp-document.h:
* src/yelp-docbook.c:
Add support for getting the sections GtkTreeModel
out
* src/yelp-page.c:
* src/yelp-page.h:
Add functions to get the length (remaining)
of page

svn path=/branches/yelp-spoon/; revision=2826

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -19,13 +19,14 @@ yelp_SOURCES =							\
 	yelp-transform.c	yelp-transform.h		\
 	yelp-gecko-services.h   yelp-gecko-services.cpp	        \
 	yelp-document.h		yelp-document.c			\
-	yelp-toc.h		yelp-toc.c
+	yelp-toc.h		yelp-toc.c			\
+	yelp-docbook.h		yelp-docbook.c
 
-#if ENABLE_MAN
-#yelp_SOURCES +=					\
-#	yelp-man-parser.c yelp-man-parser.h	\
-#	yelp-man-pager.c yelp-man-pager.h
-#endif
+if ENABLE_MAN
+yelp_SOURCES +=					\
+	yelp-man-parser.c yelp-man-parser.h	\
+	yelp-man.c yelp-man.h
+endif
 
 #if ENABLE_INFO
 #yelp_SOURCES +=					\
