Fix info page titles in TOC Fix file:// uri's when with too many /'s
* src/yelp-utils.c: 
* src/yelp-toc.c:
Fix info page titles in TOC
Fix file:// uri's when with too many /'s
* src/Makefile.am:
* src/yelp-info-parser.c:
* src/yelp-info.c:
* src/yelp-info.h:
* src/yelp-window.c:
Convert info pages across to new pager system
Hook up info pages into yelp, new style
Fix various things in the parser to cope with
having less available info for resolving frags

svn path=/branches/yelp-spoon/; revision=2831

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -28,11 +28,11 @@ yelp_SOURCES +=					\
 	yelp-man.c yelp-man.h
 endif
 
-#if ENABLE_INFO
-#yelp_SOURCES +=					\
-#	yelp-info-pager.c yelp-info-pager.h	\
-#	yelp-info-parser.c yelp-info-parser.h
-#endif
+if ENABLE_INFO
+yelp_SOURCES +=					\
+	yelp-info.c yelp-info.h	\
+	yelp-info-parser.c yelp-info-parser.h
+endif
 
 #if ENABLE_SEARCH
 #yelp_SOURCES +=						\
