Temporarily work around breakage in gnome-doc-utils Add back (empty) print
* configure.in: 
Temporarily work around breakage in gnome-doc-utils
* src/yelp-window.c:
Add back (empty) print menu items to stop errors
Add the "Loading..." and watch cursor when we are loading
Correctly set the sensitivity of relevant menu items for DocBooks
Make "About this document" work again
* src/yelp-docbook.c:
Since the new g-d-u currently has a list of topics on the
right, don't display the sections pane

svn path=/branches/yelp-spoon/; revision=2833

--- a/configure.in
+++ b/configure.in
@@ -89,7 +89,9 @@ XSLT_PATH="`$PKG_CONFIG --variable=xsltdir gnome-doc-utils`"
 DB_TITLE="$XSLT_PATH""/docbook/common/db-title.xsl"
 AC_SUBST(DB_TITLE)
 
-DB2HTML="`$PKG_CONFIG --variable=db2html gnome-doc-utils`"
+# TODO: Temporary bodge around g-d-u breakage
+DB2HTMLDIR="`$PKG_CONFIG --variable=xsltdir gnome-doc-utils`"
+DB2HTML=$DB2HTMLDIR/docbook/html/db2xhtml.xsl
 AC_SUBST(DB2HTML)
 
 #
