Make printing (pages and documents) work again. Although, the calling xslt
* src/yelp-window.c: 
* src/yelp-db-print.c:
* src/yelp-db-print.h:
* src/Makefile.am:
Make printing (pages and documents) work again.
Although, the calling xslt needs somewhat cleaned
up, it doesn't look particularly appealing atm.

svn path=/branches/yelp-spoon/; revision=2834

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,7 +20,8 @@ yelp_SOURCES =							\
 	yelp-gecko-services.h   yelp-gecko-services.cpp	        \
 	yelp-document.h		yelp-document.c			\
 	yelp-toc.h		yelp-toc.c			\
-	yelp-docbook.h		yelp-docbook.c
+	yelp-docbook.h		yelp-docbook.c			\
+	yelp-db-print.c		yelp-db-print.h
 
 if ENABLE_MAN
 yelp_SOURCES +=					\
