First pass at searching. Search still relies on scrollkeeper. Other than
* src/yelp-window.c: 
* src/yelp-search.c:
* src/yelp-search.h:
* src/yelp-search-parser.c:
* src/yelp-search-parser.h:
* src/yelp-utils.c:
* src/Makefile.am:
First pass at searching.
Search still relies on scrollkeeper.  Other
than that, it seems to all work (with basic search at least)

svn path=/branches/yelp-spoon/; revision=2835

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -35,11 +35,12 @@ yelp_SOURCES +=					\
 	yelp-info-parser.c yelp-info-parser.h
 endif
 
-#if ENABLE_SEARCH
-#yelp_SOURCES +=						\
-#	gtkentryaction.c	gtkentryaction.h	\
-#	yelp-search-pager.c	yelp-search-pager.h
-#endif
+if ENABLE_SEARCH
+yelp_SOURCES +=						\
+	gtkentryaction.c	gtkentryaction.h	\
+	yelp-search.c		yelp-search.h		\
+	yelp-search-parser.c 	yelp-search-parser.h
+endif
 
 YELP_DEFINES =								\
 	-DG_LOG_DOMAIN=\"Yelp\"						\
