Lots of fun updates... Clean up yelp-window.c a LOT Remove old, obsolete
* src/Makefile.am: 
* configure.ac:
* src/yelp-toc.c:
* src/yelp-search-parser.c:
* src/yelp-window.c:
* src/yelp-info-parser.c:
Lots of fun updates...
Clean up yelp-window.c a LOT
Remove old, obsolete code
Make search, man and info mandatory
Bump g-d-u min version to include new db2xhtml code
Remove extra printf I'd forgotten

svn path=/branches/yelp-spoon/; revision=2839

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -21,26 +21,14 @@ yelp_SOURCES =							\
 	yelp-document.h		yelp-document.c			\
 	yelp-toc.h		yelp-toc.c			\
 	yelp-docbook.h		yelp-docbook.c			\
-	yelp-db-print.c		yelp-db-print.h
-
-if ENABLE_MAN
-yelp_SOURCES +=					\
-	yelp-man-parser.c yelp-man-parser.h	\
-	yelp-man.c yelp-man.h
-endif
-
-if ENABLE_INFO
-yelp_SOURCES +=					\
-	yelp-info.c yelp-info.h	\
-	yelp-info-parser.c yelp-info-parser.h
-endif
-
-if ENABLE_SEARCH
-yelp_SOURCES +=						\
-	gtkentryaction.c	gtkentryaction.h	\
-	yelp-search.c		yelp-search.h		\
+	yelp-db-print.c		yelp-db-print.h			\
+	yelp-man-parser.c 	yelp-man-parser.h		\
+	yelp-man.c 		yelp-man.h			\
+	yelp-info.c 		yelp-info.h			\
+	yelp-info-parser.c 	yelp-info-parser.h		\
+	gtkentryaction.c	gtkentryaction.h		\
+	yelp-search.c		yelp-search.h			\
 	yelp-search-parser.c 	yelp-search-parser.h
-endif
 
 YELP_DEFINES =								\
 	-DG_LOG_DOMAIN=\"Yelp\"						\
