--- a/configure.in
+++ b/configure.in
@@ -66,7 +66,7 @@ AM_GLIB_DEFINE_LOCALEDIR([GNOMELOCALEDIR])
 PKG_CHECK_MODULES(YELP,
 [
 	gconf-2.0
-	gnome-doc-utils >= 0.3.1
+	gnome-doc-utils >= 0.11.1
 	gtk+-unix-print-2.0
 	gnome-vfs-2.0 >= 1.1
 	gtk+-2.0 >= 2.10.0
@@ -89,9 +89,7 @@ XSLT_PATH="`$PKG_CONFIG --variable=xsltdir gnome-doc-utils`"
 DB_TITLE="$XSLT_PATH""/docbook/common/db-title.xsl"
 AC_SUBST(DB_TITLE)
 
-# TODO: Temporary bodge around g-d-u breakage
-DB2HTMLDIR="`$PKG_CONFIG --variable=xsltdir gnome-doc-utils`"
-DB2HTML=$DB2HTMLDIR/docbook/html/db2xhtml.xsl
+DB2HTML="`$PKG_CONFIG --variable=db2xhtml gnome-doc-utils`"
 AC_SUBST(DB2HTML)
 
 #
@@ -124,34 +122,6 @@ fi
 
 AC_SUBST(X_LIBS)
 
-AC_ARG_ENABLE([man],
-	[AC_HELP_STRING([--enable-man],
-			[turn on man page support [default=yes]])],,
-	enable_man=yes)
-AC_ARG_ENABLE([info],
-	[AC_HELP_STRING([--enable-info],
-			[turn on GNU info support [default=yes]])],,
-	enable_info=yes)
-if test "x$enable_man" = "xyes"; then
-    AC_DEFINE(ENABLE_MAN, 1, [turn on man page support])
-    AM_CONDITIONAL(ENABLE_MAN, true)
-else
-    AM_CONDITIONAL(ENABLE_MAN, false)
-fi
-if test "x$enable_info" = "xyes"; then
-    AC_DEFINE(ENABLE_INFO, 1, [turn on GNU info support])
-    AM_CONDITIONAL(ENABLE_INFO, true)
-else
-    AM_CONDITIONAL(ENABLE_INFO, false)
-fi
-
-if test "x$enable_man" = "xyes" -o "x$enable_info" = "xyes"; then
-   AC_DEFINE(ENABLE_MAN_OR_INFO, 1, [turn of man page or GNU info support])
-   AM_CONDITIONAL(ENABLE_MAN_OR_INFO, true)
-else
-   AM_CONDITIONAL(ENABLE_MAN_OR_INFO, false)
-fi
-
 
 dnl ******
 dnl beagle
@@ -160,7 +130,7 @@ dnl ******
 BEAGLE_MODULES="libbeagle-0.0 >= 0.2.4"
 
 AC_ARG_WITH([search],
-	[AC_HELP_STRING([--with-search=basic|beagle|auto|no],
+	[AC_HELP_STRING([--with-search=basic|beagle|auto],
 			[turn on search support [default=auto]])], ,
 	with_search=auto)
 
@@ -168,7 +138,6 @@ if test "x$with_search" = "xauto"; then
     PKG_CHECK_MODULES(YELP_SEARCH, $BEAGLE_MODULES, have_beagle=yes, have_beagle=no)
 fi
 
-AM_CONDITIONAL(ENABLE_SEARCH, test x"$with_search" != xno)
 AM_CONDITIONAL(ENABLE_BEAGLE, test x"$with_search" = xbeagle)
 
 if test "x$with_search" = "xbeagle"; then
@@ -179,18 +148,12 @@ fi
 case "x$with_search" in
   "xbasic")
     search_backend="basic"
-    AC_DEFINE(ENABLE_SEARCH, 1, [Define if you want any search])
     ;;
   "xbeagle")
     search_backend="beagle"
-    AC_DEFINE(ENABLE_SEARCH, 1, [Define if you want any search])
     AC_DEFINE(ENABLE_BEAGLE, 1, [Define if you want the power of Beagle])
     ;;
-  "xno")
-    search_backend="none"
-    ;;
   "xauto")
-    AC_DEFINE(ENABLE_SEARCH, 1)
     search_backend="auto - basic"
     if test x$have_beagle = xyes; then
       AC_DEFINE(ENABLE_BEAGLE, 1)
@@ -198,7 +161,7 @@ case "x$with_search" in
     fi
     ;;
   *)
-    AC_MSG_ERROR([Unknown search type selected - Please use --with-search=auto|basic|beagle|no])
+    AC_MSG_ERROR([Unknown search type selected - Please use --with-search=auto|basic|beagle])
     ;;
 esac
 
@@ -292,8 +255,6 @@ yelp-$VERSION:
 	compiler:		  ${CC}
 
 	Debug enabled:            ${enable_debug}
-	Man Pages enabled:        ${enable_man}
-	Info Pages enabled:       ${enable_info}
 	Search backend:           ${search_backend}
 	Mozilla version:          ${MOZILLA}
 "
