Massive cleanup Remove old code from yelp-utils Fix shutdown requests from
* configure.ac:
* src/yelp-base.c:
* src/yelp-search-parser.c:
* src/yelp-search.c:
* src/yelp-window.c:
* src/yelp-window.h:
* src/yelp-utils.c:
* src/yelp-utils.h:
* src/Makefile.am:
* src/yelp-main.c:
Massive cleanup
Remove old code from yelp-utils
Fix shutdown requests from sessions (hopefully)
Remove as many warnings as possible (the rest are
mostly mozilla errors)
Make sure we get and set GLIB_GENMARSHAL as, apparently,
we have never done this which seems to result in badness
making the marshal.list

svn path=/branches/yelp-spoon/; revision=2840

--- a/configure.in
+++ b/configure.in
@@ -92,6 +92,9 @@ AC_SUBST(DB_TITLE)
 DB2HTML="`$PKG_CONFIG --variable=db2xhtml gnome-doc-utils`"
 AC_SUBST(DB2HTML)
 
+GLIB_GENMARSHAL="`$PKG_CONFIG --variable=glib_genmarshal glib-2.0`"
+AC_SUBST(GLIB_GENMARSHAL)
+
 #
 # If Pango included the shared library dependencies from X11 in
 # the pkg-config output, then we use that (to avoid duplicates).
