Make themes sort-of work. Good enough for a release, anyway
* src/yelp-settings.c: 
* configure.in:
* src/yelp-settings.h:
* src/Makefile.am:
* stylesheets/yelp-common.xsl:
Make themes sort-of work.  Good enough for
a release, anyway

svn path=/branches/yelp-spoon/; revision=2845

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -40,7 +40,8 @@ YELP_DEFINES =								\
 	-DSERVERDIR=\"$(libexecdir)\"					\
 	-DBINDIR=\""$(bindir)"\"					\
 	-DSHAREDIR=\""$(pkgdatadir)"\"                                  \
-	-DMOZILLA_HOME=\""$(MOZILLA_HOME)\""
+	-DMOZILLA_HOME=\""$(MOZILLA_HOME)\""				\
+	-DGDU_ICON_PATH=\"$(GDU_ICON_PATH)\"
 
 mozilla_include_subdirs =	\
 	.		\
