Disable test programs for now
* src/Makefile.am: 
Disable test programs for now

svn path=/trunk/; revision=2850

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -93,12 +93,12 @@ yelp_LDADD =				\
 
 yelp_LDFLAGS = -R$(MOZILLA_HOME) $(AM_LDFLAGS)
 
-check_PROGRAMS =		\
-	test-document		\
-	test-man-parser		\
-	test-page		\
-	test-transform		\
-	test-resolver
+#check_PROGRAMS =		\
+#	test-document		\
+#	test-man-parser		\
+#	test-page		\
+#	test-transform		\
+#	test-resolver
 
 test_document_SOURCES =					\
 	yelp-debug.c		yelp-debug.h		\
