Updated Spanish translation
svn path=/trunk/; revision=2855

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -8,6 +8,7 @@ data/ui/yelp.glade
 data/yelp.schemas.in
 src/yelp-base.c
 src/yelp-bookmarks.c
+src/yelp-db-pager.c
 src/yelp-db-print.c
 src/yelp-db-print-pager.c
 src/yelp-docbook.c
