--- a/Makefile.am
+++ b/Makefile.am
@@ -5,8 +5,8 @@ ACLOCAL_AMFLAGS = -I m4
 @INTLTOOL_DESKTOP_RULE@
 
 desktopdir = $(datadir)/applications
-desktop_in_files=yelp.desktop.in
-desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
+desktop_in_files=yelp.desktop.in.in
+desktop_DATA = $(desktop_in_files:.desktop.in.in=.desktop)
 
 yelpdatadir = $(datadir)/yelp
 yelpdata_DATA = important_docs.xml
