- String corrections from Seán de Búrca, fixed #505797
* data/toc.xml.in:
- String corrections from Seán de Búrca, fixed #505797

svn path=/trunk/; revision=3014

--- a/data/toc.xml.in
+++ b/data/toc.xml.in
@@ -5,7 +5,7 @@
   <_description>Welcome to the GNOME Help Browser</_description>
   <toc id="Accessibility" icon="accessibility-directory">
     <_title>Accessibility</_title>
-    <_description>Learn more about making you're system more accessible for a 
+    <_description>Learn more about making your system more accessible for a 
     range of disabilities</_description>
   </toc>
   <toc id="GNOME">
@@ -319,7 +319,7 @@
   </toc>
   <toc id="Settings" icon="gnome-system">
     <_title>Settings</_title>
-    <_description>Settings users can manipulate to make their environment more pleasent</_description>
+    <_description>Settings users can manipulate to make their environment more pleasant</_description>
     <toc id="DesktopSettings">
       <_title>DesktopSettings</_title>
     </toc>
@@ -332,7 +332,7 @@
   </toc>
   <toc id="System" icon="gnome-system">
     <_title>System</_title>
-    <_description>Tools to help you manage you're computer</_description>
+    <_description>Tools to help you manage your computer</_description>
     <toc id="Emulator">
       <_title>Emulator</_title>
     </toc>
@@ -393,7 +393,7 @@
       <_title>Text Tools</_title>
     </toc>
     <toc id="Documentation">
-      <_title>Licences</_title>
+      <_title>Licenses</_title>
     </toc>
     <toc id="GTK">
       <_title>GTK</_title>
