--- a/yelp.desktop.in.in
+++ b/yelp.desktop.in.in
@@ -1,5 +1,4 @@
 [Desktop Entry]
-Encoding=UTF-8
 _Name=Help
 _Comment=Get help with GNOME
 Exec=yelp
@@ -7,7 +6,7 @@ Icon=gnome-help
 StartupNotify=true
 Terminal=false
 Type=Application
-Categories=GNOME;GTK;Application;Core;
+Categories=GNOME;GTK;Core;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=Yelp
 X-GNOME-Bugzilla-Component=general
