Fix some menu titles to be non-insane names Add translator comments to
* data/toc.xml.in: 
Fix some menu titles to be non-insane names
Add translator comments to unclear menu entries

svn path=/trunk/; revision=3032

--- a/data/toc.xml.in
+++ b/data/toc.xml.in
@@ -25,34 +25,38 @@
 	<_title>TV</_title>
       </toc>
     </toc>
+    <toc id="AudioVideoEditing">
+      <_title>Sound &amp; Video Editing</_title>
+    </toc>
     <toc id="Audio">
       <_title>Sound</_title>
       <toc id="Midi">
 	<_title>Midi</_title>
       </toc>
       <toc id="Mixer">
-	<_title>Mixer</_title>
+	<_title>Mixers</_title>
       </toc>
       <toc id="Sequencer">
-	<_title>Sequencer</_title>
+	<_title>Sequencers</_title>
       </toc>
       <toc id="Tuner">
-	<_title>Tuner</_title>
+	<_title>Tuners</_title>
       </toc>
     </toc>
-    <toc id="AudioVideoEditing">
-      <_title>AudioVideoEditing</_title>
-    </toc>
     <toc id="Player">
-      <_title>Player</_title>
+      <!-- Translators: this is a menu title for audio and video players -->
+      <_title>Players</_title>
     </toc>
     <toc id="Recorder">
-      <_title>Recorder</_title>
+      <!-- Translators: this is a menu title for audio and video recorders -->
+      <_title>Recorders</_title>
     </toc>
     <toc id="DiscBurning">
-      <_title>DiscBurning</_title>
+      <!-- Translators: this is a menu title for burning audio and video to dics -->
+      <_title>Disc Burning</_title>
     </toc>
   </toc>
+
   <toc id="Development" icon="gnome-devel">
     <_title>Development</_title>
     <_description>Guides for getting involved in development</_description>
@@ -60,22 +64,22 @@
       <_title>Building</_title>
     </toc>
     <toc id="Debugger">
-      <_title>Debugger</_title>
+      <_title>Debuggers</_title>
     </toc>
     <toc id="IDE">
-      <_title>IDE</_title>
+      <_title>IDEs</_title>
     </toc>
     <toc id="GUIDesigner">
-      <_title>GUIDesigner</_title>
+      <_title>GUI Designers</_title>
     </toc>
     <toc id="Profiling">
-      <_title>Profiling</_title>
+      <_title>Profiling Tools</_title>
     </toc>
     <toc id="RevisionControl">
-      <_title>RevisionControl</_title>
+      <_title>Revision Control</_title>
     </toc>
     <toc id="Translation">
-      <_title>Translation</_title>
+      <_title>Translation Tools</_title>
     </toc>
   </toc>
   <toc id="Education">
@@ -94,7 +98,7 @@
       <_title>Science</_title>
     </toc>
     <toc id="ArtificialIntelligence">
-      <_title>ArtificialIntelligence</_title>
+      <_title>Artificial Intelligence</_title>
     </toc>
     <toc id="Astronomy">
       <_title>Astronomy</_title>
@@ -106,10 +110,10 @@
       <_title>Chemistry</_title>
     </toc>
     <toc id="ComputerScience">
-      <_title>ComputerScience</_title>
+      <_title>Computer Science</_title>
     </toc>
     <toc id="DataVisualization">
-      <_title>DataVisualization</_title>
+      <_title>Data Visualization</_title>
     </toc>
     <toc id="Economy">
       <_title>Economy</_title>
@@ -130,7 +134,7 @@
       <_title>History</_title>
     </toc>
     <toc id="ImageProcessing">
-      <_title>ImageProcessing</_title>
+      <_title>Image Processing</_title>
     </toc>
     <toc id="Literature">
       <_title>Literature</_title>
@@ -139,10 +143,10 @@
       <_title>Math</_title>
     </toc>
     <toc id="NumericalAnalysis">
-      <_title>NumericalAnalysis</_title>
+      <_title>Numerical Analysis</_title>
     </toc>
     <toc id="MedicalSoftware">
-      <_title>MedicalSoftware</_title>
+      <_title>Medical Software</_title>
     </toc>
     <toc id="Physics">
       <_title>Physics</_title>
@@ -154,7 +158,7 @@
       <_title>Sports</_title>
     </toc>
     <toc id="ParallelComputing">
-      <_title>ParallelComputing</_title>
+      <_title>Parallel Computing</_title>
     </toc>
   </toc>
   <toc id="Games" icon="gnome-joystick">
@@ -204,16 +208,16 @@
     <_title>Graphics</_title>
     <_description>Applications for viewing and manipulating graphics</_description>
     <toc id="2DGraphics">
-      <_title>2DGraphics</_title>
+      <_title>2D Graphics</_title>
     </toc>
     <toc id="VectorGraphics">
-      <_title>VectorGraphics</_title>
+      <_title>Vector Graphics</_title>
     </toc>
     <toc id="RasterGraphics">
-      <_title>RasterGraphics</_title>
+      <_title>Raster Graphics</_title>
     </toc>
     <toc id="3DGraphics">
-      <_title>3DGraphics</_title>
+      <_title>3D Graphics</_title>
     </toc>
     <toc id="Scanning">
       <_title>Scanning</_title>
@@ -228,6 +232,7 @@
       <_title>Publishing</_title>
     </toc>
     <toc id="Viewer">
+      <!-- Translators: This is a menu title for graphics viewing applications-->
       <_title>Viewer</_title>
     </toc>
   </toc>
@@ -238,19 +243,19 @@
       <_title>Dialup</_title>
     </toc>
     <toc id="InstantMessaging">
-      <_title>InstantMessaging</_title>
+      <_title>Instant Messaging</_title>
     </toc>
     <toc id="Chat">
       <_title>Chat</_title>
     </toc>
     <toc id="IRCClient">
-      <_title>IRCClient</_title>
+      <_title>IRC Clients</_title>
     </toc>
     <toc id="FileTransfer">
-      <_title>FileTransfer</_title>
+      <_title>File Transfer</_title>
     </toc>
     <toc id="HamRadio">
-      <_title>HamRadio</_title>
+      <_title>Ham Radio</_title>
     </toc>
     <toc id="News">
       <_title>News</_title>
@@ -259,19 +264,19 @@
       <_title>P2P</_title>
     </toc>
     <toc id="RemoteAccess">
-      <_title>RemoteAccess</_title>
+      <_title>Remote Access</_title>
     </toc>
     <toc id="Telephony">
       <_title>Telephony</_title>
     </toc>
     <toc id="VideoConference">
-      <_title>VideoConference</_title>
+      <_title>Video Conference</_title>
     </toc>
     <toc id="WebBrowser">
-      <_title>WebBrowser</_title>
+      <_title>Web Browser</_title>
     </toc>
     <toc id="WebDevelopment">
-      <_title>WebDevelopment</_title>
+      <_title>Web Development</_title>
     </toc>
   </toc>
   <toc id="Office" icon="gnome-applications">
@@ -281,53 +286,53 @@
       <_title>Calendar</_title>
     </toc>
     <toc id="ContactManagement">
-      <_title>ContactManagement</_title>
+      <_title>Contact Management</_title>
     </toc>
     <toc id="Database">
-      <_title>Database</_title>
+      <_title>Databases</_title>
     </toc>
     <toc id="Dictionary">
-      <_title>Dictionary</_title>
+      <_title>Dictionaries</_title>
     </toc>
     <toc id="Chart">
-      <_title>Chart</_title>
+      <_title>Charting Tools</_title>
     </toc>
     <toc id="Email">
-      <_title>Email</_title>
+      <_title>Email Tools</_title>
     </toc>
     <toc id="Finance">
-      <_title>Finance</_title>
+      <_title>Financial Tools</_title>
     </toc>
     <toc id="FlowChart">
-      <_title>FlowChart</_title>
+      <_title>Flow Charting Tools</_title>
     </toc>
     <toc id="PDA">
-      <_title>PDA</_title>
+      <_title>PDA Communication</_title>
     </toc>
     <toc id="ProjectManagement">
-      <_title>ProjectManagement</_title>
+      <_title>Project Management Tools</_title>
     </toc>
     <toc id="Presentation">
-      <_title>Presentation</_title>
+      <_title>Presentation Tools</_title>
     </toc>
     <toc id="Spreadsheet">
-      <_title>Spreadsheet</_title>
+      <_title>Spreadsheet Tools</_title>
     </toc>
     <toc id="WordProcessor">
-      <_title>WordProcessor</_title>
+      <_title>Word Processors</_title>
     </toc>
   </toc>
   <toc id="Settings" icon="gnome-system">
     <_title>Settings</_title>
     <_description>Settings users can manipulate to make their environment more pleasant</_description>
     <toc id="DesktopSettings">
-      <_title>DesktopSettings</_title>
+      <_title>Desktop Settings</_title>
     </toc>
     <toc id="Printing">
       <_title>Printing</_title>
     </toc>
     <toc id="TerminalEmulator">
-      <_title>TerminalEmulator</_title>
+      <_title>Terminal Emulator</_title>
     </toc>
   </toc>
   <toc id="System" icon="gnome-system">
@@ -340,16 +345,16 @@
       <_title>Engineering</_title>
     </toc>
     <toc id="PackageManager">
-      <_title>PackageManager</_title>
+      <_title>Package Manager</_title>
     </toc>
     <toc id="FileTools">
-      <_title>FileTools</_title>
+      <_title>File Tools</_title>
     </toc>
     <toc id="FileManager">
-      <_title>FileManager</_title>
+      <_title>File Manager</_title>
     </toc>
     <toc id="HardwareSettings">
-      <_title>HardwareSettings</_title>
+      <_title>Hardware Settings</_title>
     </toc>
     <toc id="Filesystem">
       <_title>Filesystem</_title>
@@ -368,19 +373,19 @@
       <_title>Calculator</_title>
     </toc>
     <toc id="Clock">
-      <_title>Clock</_title>
+      <_title>Clocks</_title>
     </toc>
     <toc id="TextEditor">
-      <_title>TextEditor</_title>
+      <_title>Text Editors</_title>
     </toc>
     <toc id="TelephonyTools">
-      <_title>TelephonyTools</_title>
+      <_title>Telephony Tools</_title>
     </toc>
     <toc id="Archiving">
-      <_title>Archiving</_title>
+      <_title>Archiving Tools</_title>
     </toc>
     <toc id="Compression">
-      <_title>Compression</_title>
+      <_title>Compression Tools</_title>
     </toc>
     <toc id="Electronics">
       <_title>Electronics</_title>
