Fix Games category
* data/toc.xml.in: 
Fix Games category

svn path=/trunk/; revision=3034

--- a/data/toc.xml.in
+++ b/data/toc.xml.in
@@ -161,7 +161,7 @@
       <_title>Parallel Computing</_title>
     </toc>
   </toc>
-  <toc id="Games" icon="gnome-joystick">
+  <toc id="Game" icon="gnome-joystick">
     <_title>Games</_title>
     <_description>Have some fun</_description>
     <toc id="ActionGame">
